# ml.mind-spark.ru

./: .env  .gitignore  Dockerfile  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/v1/endpoints/: ml.py
app/core/: config.py
app/db/: session.py
app/services/: neural_service.py
