[tool.poetry]
name = "ml.mind-spark.ru"
version = "0.1.0"
description = ""
authors = ["Vladimir Tsyganov <tsyganov.vv0228@gmail.com>"]
readme = "README.md"

packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
sqlalchemy = ">=2.0.0"
asyncpg = ">=0.29.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-multipart = ">=0.0.6"
alembic = ">=1.12.0"
redis = ">=5.0.0"
python-dotenv = ">=1.0.0"
httpx = ">=0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.build_meta"